--- a/subscriptions/src/config.yaml
+++ b/subscriptions/src/config.yaml
@@ -1,18 +1,24 @@
-query: |
-  subscription ($id: Int!) {
-    test(where: {id: {_eq: $id}}) {
-      id
-      name
+url: http://localhost:8085/v1/graphql
+db_connection_string: postgres://postgres:postgrespassword@localhost:5430/postgres
+headers:
+  X-Hasura-Admin-Secret: my-secret
+config:
+  label: SearchAlbumsWithArtistUpdated
+  max_connections: 10
+  connections_per_second: 10
+  query: |
+    subscription AlbumByIDSubscription($artistIds: [Int!]!) {
+      albums(where: {artist_id: { _in: $artistIds}}) {
+        id
+        title
+        updated_at
+      }
     }
-  }
-timePeriod: 2
-variables:
-  id: '1'
-headers: []
-template:
-  range:
-    start: 1
-    end: 10
-  headers: []
   variables:
-    - id
+    # some_value: a_string
+    # some_range: { start: 1, end: 10 }
+    # another_range: { start: 50, end: 100 }
+    # some_number: 10
+    artistIds: [1, 2, 3, 4]
+    # some_object:
+    #   a_key: a_value
