--- a/subscriptions/package.json
+++ b/subscriptions/package.json
@@ -21,6 +21,7 @@
     "js-yaml": "^3.13.1",
     "knex": "^0.21.1",
     "lodash": "^4.17.15",
+    "log-update": "^4.0.0",
     "objection": "^1.6.3",
     "pg": "^8.2.1",
     "websocket-as-promised": "^1.0.1",
