--- a/subscriptions/src/config.yaml
+++ b/subscriptions/src/config.yaml
@@ -15,11 +15,11 @@ config:
         updated_at
       }
     }
-  # variables:
-  #   some_value: a_string
+  variables:
+  # some_value: a_string
   # some_range: { start: 1, end: 10 }
   # another_range: { start: 50, end: 100 }
   # some_number: 10
-  artistIds: [1, 2, 3, 4]
+    artistIds: [1, 2, 3, 4]
   # some_object:
   #   a_key: a_value
