--- a/subscriptions/package.json
+++ b/subscriptions/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nx-js/observer-util": "^4.2.2",
     "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.154",
     "@types/node": "^11.9.5",
@@ -24,6 +25,7 @@
     "log-update": "^4.0.0",
     "objection": "^1.6.3",
     "pg": "^8.2.1",
+    "reattempt": "^0.1.1",
     "websocket-as-promised": "^1.0.1",
     "ws": "^7.3.0"
   },
