--- a/subscriptions/tsconfig.json
+++ b/subscriptions/tsconfig.json
@@ -14,6 +14,7 @@
     "declaration": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "lib": ["es6", "esnext.asynciterable", "ESNEXT"],
     "types": ["node"]
   },
