--- a/app/subscriptions/package.json
+++ b/app/subscriptions/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
-    "start": "ts-node ./src/main.ts",
+    "start": "ts-node ./src/run.ts",
     "knex:migrate:make": "ts-node ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts migrate:make -x ts",
     "knex:migrate:latest": "ts-node ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts migrate:latest",
     "knex:migrate:rollback": "ts-node ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts migrate:rollback"
